--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                      <li class="icon"><a href="https://www.facebook.com/me/" target=_blank><span class="iconify facebook" data-icon="entypo-social:facebook-with-circle" data-inline="false"  data-width="50" data-height="50"></span></li></a>
                      
                     </ul>
-                    <a href="https://drive.google.com/file/d/11b36mCnjfYm-SbC_pW0Dvz-t8wG0Vwg_/view?usp=drive_link" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
+                    <a href="https://drive.google.com/file/d/1Ac8NB9_21t2YPvUeFfY0i_jiukTb2-Xm/view?usp=drive_link" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
              </div>
         </div>
         </section>
@@ -85,6 +85,6 @@
         </div>
         </div>
     </section>
-    <footer class=footer>Made with ❤️ by Vali Shaik</footer>   
+    <footer class=footer>Code tells my story</footer>   
     </body>
     </html>
