--- a/Education.html
+++ b/Education.html
@@ -218,7 +218,7 @@
         </div>
     </section>
     
-    <footer class=footer>Made with ❤️ by Vali Shaik</footer>
+    <footer class=footer>Code tells my story</footer>
 </body>
 
 </html>
