--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
                
         
           </section>
-    <footer class=footer>Made with ❤️ by Vali Shaik</footer>
+    <footer class=footer>Code tells my story</footer>
 </body>
 </html>
