--- a/skill.html
+++ b/skill.html
@@ -105,7 +105,7 @@
       </div>
     </div>
   </section>
-  <footer class=footer>Made with ❤️ by Vali Shaik</footer>
+  <footer class=footer>Code tells my story</footer>
 </body>
 
 </html>
