--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>  
                   <div class="col-lg-6 section-1">
                       <h1 class = "Hello">Hello! I'm Vali <span class="wave">👋</span></h1>
-                      <p>Hi there! My name is Mahaboob Vali Shaik, and I am a passionate and driven student pursuing 3rd year at Malla Reddy University.
+                      <p>Hi there! My name is Mahaboob Vali Shaik, and I am a passionate and driven student pursuing 4th year at Malla Reddy University.
                          With a profound interest in Web Development and AI&ML, I strive to excel both academically and personally</p>
                           <div class=social_media_icon>
                             <a class="btn" href="https://www.instagram.com/valishaik529/" target=_blank>
